# copy_prog

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  copy_prog.desktop
.github/workflows/: release.yml
src/: main.rs
